--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,9 @@
 # Site settings
 title: NK
 brief-intro: DevOps Data Engineer
-baseurl: "Blog" # the subpath of your site, e.g. /blog
+baseurl: "/Blog" # the subpath of your site, e.g. /blog
 url: "https://nilskuhler.github.io" # the base hostname & protocol for your site
+
 
 permalink: /:year/:month/:day/:title/
 
