--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: NK
 brief-intro: DevOps Data Engineer
-baseurl: "/Blog" # the subpath of your site, e.g. /blog
+baseurl: "/Blog" #Github "/Blog" # the subpath of your site, e.g. /blog
 url: "https://nilskuhler.github.io" # the base hostname & protocol for your site
 
 
