--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@
 title: NK
 brief-intro: DevOps Data Engineer
 # >>OR use baseurl and url to deploy this site remotely/github
-baseurl: "/Blog"                    # "/Blog" # the subpath of your remote site, e.g. /blog
-url: "https://nilskuhler.github.io" # the url hostname & protocol for your remote site
+##baseurl: "/Blog"                    # "/Blog" # the subpath of your remote site, e.g. /blog
+##url: "https://nilskuhler.github.io" # the url hostname & protocol for your remote site
 # >>OR use baseurl and url to deploy this site locally
-##baseurl:                              # The baseurl should be empty to run locally. DO NOT USE ""
-##url: "https://nilskuhler.github.io"   # The url should contain this "https://nilskuhler.github.io"  content otherwise mobile menu does not work. 
+baseurl:                              # The baseurl should be empty to run locally. DO NOT USE ""
+url: "https://nilskuhler.github.io"   # The url should contain this "https://nilskuhler.github.io"  content otherwise mobile menu does not work. 
 
 permalink: /:year/:month/:day/:title/
 
